add nueva seccion de inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -142,8 +142,8 @@
     <section class="conten_setion_uno">
       <div class="titulo_setion_uno">
         <h1>
-          Soy el<br />
-          <strong>diseñador</strong> que <br />
+          Soy el
+          <strong>diseñador</strong> <br /> que 
           buscabas
         </h1>
         <p>
@@ -151,29 +151,26 @@
           hermosas soluciones creativas”
         </p>
         <div class="boton_setion_uno">
-          <a class="boton_setion_uno_see" href="">See my work</a>
+          <a class="boton_setion_uno_see cursor-scale small" href="#mywork">See my work</a>
           <a
-            class="boton_setion_uno_contac"
+            class="boton_setion_uno_contac cursor-scale small"
             href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank"
+            data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="500"
+            data-aos-duration="500"
             >Talk me</a
           >
         </div>
         <div class="cont_barra_contadores">
           <img src="../assets/img/mecontadores.svg" alt="mecontadores" />
           <div>
-            <img
-              src="../assets/img/flechacontadores.svg"
-              alt="flachacontadores"
-            />
-            <h4>4</h4>
+            <h4>+12</h4>
             <p>Proyectos</p>
           </div>
           <div>
-            <img
-              src="../assets/img/flechacontadores.svg"
-              alt="flachacontadores"
-            />
-            <h4>2 Años</h4>
+            <h4>+4</h4>
             <p>Experiencia</p>
           </div>
         </div>
@@ -339,7 +336,7 @@
     </section>
     <!-- 4. servicios -->
     <section class="mis_servicios">
-      <div class="cont_titulo_mis_servicios">
+      <div id="mywork" class="cont_titulo_mis_servicios">
         <p class="titulo">Mis servicios</p>
         <div class="cont_subtitulo_mis_servicios">
           <h3 class="subtitulo_aboutme">ME ESPECIALIZO</h3>
@@ -347,7 +344,7 @@
           <p class="etiqueta">( de todo un poco )</p>
         </div>
       </div>
-      <div class="cont_lista_mis_servicios">
+      <div   class="cont_lista_mis_servicios">
         <a
           class="cont_item_mis_servicios cursor-scale small"
           target="_blank"
@@ -2721,10 +2718,9 @@
     <!-- 8. reel diagonal -->
     <section class="cont_reel_diagonal">
       <div class="cont_fixed_reel">
-        <h3 class="titulo_reel">DISEÑADOR DE EXPERIENCIAS POSITIVA</h3>
+        <h3 class="titulo_reel">SI TE GUSTA APRENDER AL IGUAL QUE A MI</h3>
         <p class="contenido_reel">
-          UNA DE MIS METODOLOGIAS DE DISEÑO PREFERIDAS ES LA ATOMIC DESING Y ES
-          LA QUE MAS USO REGULARMENTE EN TODOS MIS PROYECTOS.
+          PODRAS ENCONTRAR MIS TUTORIALES AQUI, TODO PARA BEGINNERS QUE QUIEREN APRENDER.
         </p>
       </div>
 
