--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -107,9 +107,7 @@
             </div>
             <div class="parrafo">
                 <p>
-                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
-                    útiles y resuelvan las necesidades reales de los usuarios.
-                </p>
+                    Desarrollo del lado frontend paginas web  llamativas y interactivas con HTML5, CSS, JS y también aplicaciones multiplataforma usando el framework Flutter.
             </div>
             <div class="contadores">
 
