--- a/pages/p_ux_research.html
+++ b/pages/p_ux_research.html
@@ -108,8 +108,7 @@
             </div>
             <div class="parrafo">
                 <p>
-                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
-                    útiles y resuelvan las necesidades reales de los usuarios.
+                    Me encargo mediante investigación y análisis de identificar las necesidades de tus usuarios con el fin mejorar tus producto y la experiencia.
                 </p>
             </div>
             <div class="contadores">
@@ -121,8 +120,8 @@
             </div>
         </div>
 
-        <div class="columdos">
-
+        <div class="columdosres">
+            <img class="imgres" src="../assets/img/imgresearch.png" alt="imgresearch">
         </div>
 
     </section>
