--- a/pages/p_ux_writing.html
+++ b/pages/p_ux_writing.html
@@ -21,6 +21,14 @@
 
 <body class="body_plantilla">
     <div class="cursor"></div>
+    <div class="float__wapp_dos">
+        <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+            data-aos-duration="500">
+            <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="" />
+            <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt="" />
+        </a>
+    </div>
     <!-- Menu -->
     <section class="conte__menu">
         <header class="header__index">
@@ -100,8 +108,7 @@
             </div>
             <div class="parrafo">
                 <p>
-                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
-                    útiles y resuelvan las necesidades reales de los usuarios.
+                    Diseño la forma en la que tus productos hablan y se comunican con sus usuarios también mejoro la experiencia que estos dejan usando las  palabras correctas.
                 </p>
             </div>
             <div class="contadores">
