add mod section inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -101,7 +101,7 @@
                 alt=""
               />
               <a translate="no" href="/pages/p_ux_writing.html"
-                >UX - Wrinting
+                >UX - Writing
                 <p>(04)</p>
               </a>
             </div>
