--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="cont_opcion_lista">
                         <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="/pages/p_ux_writing.html">UX - Wrinting
+                        <a translate="no" href="/pages/p_ux_writing.html">UX - Writing
                             <p>(04)</p>
                         </a>
                     </div>
