--- a/pages/index.html
+++ b/pages/index.html
@@ -669,102 +669,20 @@
       </section>
     </div>
     <!-- 7. mi tools -->
-    <div class="cont_titulo_mis_horizontal">
-      <p class="titulo">Herramientas y habilidades</p>
-      <div class="cont_subtitulo_mis_horizontal">
-        <h3 class="subtitulo_aboutme">MY SKILLS</h3>
-      </div>
-    </div>
+
     <div class="capa_contenedora">
       <section class="cont_horizontal_ocho">
+
         <section class="cont_horizontal_uno">
-          <div class="cont_sslider_uno">
-            <div class="sslider_uno">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
+
+          <div class="conte_titulo">
+            <p class="titulouno">Herramientas y habilidades</p>
+          </div>
+          
+          <div class="cont_subtitulo_mis_horizontal">
+            <h3 class="subtitulo_aboutme">MY SKILLS</h3>
           </div>
 
-          <div class="cont_sslider_dos">
-            <div class="sslider_dos">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_uno">
-            <div class="sslider_uno">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_dos">
-            <div class="sslider_dos">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_uno">
-            <div class="sslider_uno">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_dos">
-            <div class="sslider_dos">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_uno">
-            <div class="sslider_uno">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
-
-          <div class="cont_sslider_dos">
-            <div class="sslider_dos">
-              <img src="../assets/img/img_uno.png" alt="img_uno" />
-              <img src="../assets/img/img_dos.png" alt="img_dos" />
-              <img src="../assets/img/img_tres.png" alt="img_tres" />
-              <img src="../assets/img/img_cuatro.png" alt="img_cuatro" />
-              <img src="../assets/img/img_uno.png" alt="img_cinco" />
-              <img src="../assets/img/img_dos.png" alt="img_seis" />
-            </div>
-          </div>
         </section>
 
         <section class="cont_horizontal_dos">
@@ -847,7 +765,7 @@
           </div>
         </section>
 
-        <section class="cont_horizontal_dos">
+        <section class="cont_horizontal_tres">
           <div class="titulo">
             <h3>UX - RESEARCH</h3>
             <p>02</p>
@@ -897,7 +815,7 @@
           </div>
         </section>
 
-        <section class="cont_horizontal_dos">
+        <section class="cont_horizontal_cuatro">
           <div class="titulo">
             <h3>DEVELOPER</h3>
             <p>03</p>
@@ -957,7 +875,7 @@
           </div>
         </section>
 
-        <section class="cont_horizontal_dos">
+        <section class="cont_horizontal_cinco">
           <div class="titulo">
             <h3>INTERACTIVE</h3>
             <p>04</p>
@@ -1016,41 +934,7 @@
             </a>
           </div>
         </section>
-        <section class="img_flecha">
-          <?xml version="1.0" standalone="no"?>
-          <svg
-            id="Vector15"
-            width="26"
-            height="539"
-            viewBox="0 0 26 539"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            style="max-width: 100%; max-height: 100%"
-          >
-            <path
-              d="M12.6786 1L12.6786 538M12.6786 538C12.6786 538 10.967 535.121 7.12112 532.015C3.2752 528.909 0.838198 528.202 0.838198 528.202M12.6786 538C12.6786 538 15.7578 533.962 18.3088 532.015C20.8237 530.096 24.6617 528.202 24.6617 528.202"
-              stroke="black"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-dasharray="0,0,0,568.2374877929688"
-            >
-              <animate
-                attributeType="XML"
-                attributeName="stroke-dasharray"
-                repeatCount="indefinite"
-                dur="2.9411764705882355s"
-                values="0,0,0,568.2374877929688; 
-                          0,284.1187438964844,284.1187438964844,0; 
-                          568.2374877929688,0,0,0"
-                keyTimes="0; 0.5; 1"
-                fill="freeze"
-              ></animate>
-            </path>
-            <setting>
-              {"type":"direct","speed":17,"random":1,"shift":1,"size":1,"rupture":50}
-            </setting>
-          </svg>
-        </section>
+
       </section>
     </div>
 
