nuevo diseño de inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -142,34 +142,35 @@
     <section class="conten_setion_uno">
       <div class="titulo_setion_uno">
         <h1>
-          Soy el
-          <strong>diseñador</strong> <br /> que 
-          buscabas
+          Soy el <strong>diseñador</strong><br /> que buscabas
         </h1>
-        <p>
-          “Transformo los problemas de tus productos en <br />
-          hermosas soluciones creativas”
-        </p>
-        <div class="boton_setion_uno">
-          <a class="boton_setion_uno_see cursor-scale small" href="#mywork">See my work</a>
-          <a
-            class="boton_setion_uno_contac cursor-scale small"
-            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-            target="_blank"
-            data-aos="fade-left"
-            data-aos-anchor="#example-anchor"
-            data-aos-offset="500"
-            data-aos-duration="500"
-            >Talk me</a
-          >
-        </div>
+
         <div class="cont_barra_contadores">
           <img src="../assets/img/mecontadores.svg" alt="mecontadores" />
-          <div>
+          <div class="cont_parrafo_contadores">
+            <p class="parrafo">
+              “Transformo los problemas de tus productos en <br />
+              hermosas soluciones creativas”
+            </p>
+            <div class="boton_setion_uno">
+              <a class="boton_setion_uno_see cursor-scale small" href="#mywork">See my work</a>
+              <a
+                class="boton_setion_uno_contac cursor-scale small"
+                href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+                target="_blank"
+                data-aos="fade-left"
+                data-aos-anchor="#example-anchor"
+                data-aos-offset="500"
+                data-aos-duration="500"
+                >Talk me</a
+              >
+            </div>
+          </div>
+          <div class="contador_cont">
             <h4>+12</h4>
             <p>Proyectos</p>
           </div>
-          <div>
+          <div class="contador_cont">
             <h4>+4</h4>
             <p>Experiencia</p>
           </div>
