ajuste responsive de section inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -146,8 +146,8 @@
         </h1>
 
         <div class="cont_barra_contadores">
-          <img src="../assets/img/mecontadores.svg" alt="mecontadores" />
-          <div class="cont_parrafo_contadores">
+          <img class="item" src="../assets/img/mecontadores.svg" alt="mecontadores" />
+          <div class="cont_parrafo_contadores item">
             <p class="parrafo">
               “Transformo los problemas de tus productos en <br />
               hermosas soluciones creativas”
@@ -166,11 +166,11 @@
               >
             </div>
           </div>
-          <div class="contador_cont">
+          <div class="contador_cont item">
             <h4>+12</h4>
             <p>Proyectos</p>
           </div>
-          <div class="contador_cont">
+          <div class="contador_cont item">
             <h4>+4</h4>
             <p>Experiencia</p>
           </div>
