animacion inicio index

--- a/pages/index.html
+++ b/pages/index.html
@@ -34,9 +34,16 @@
         data-aos-anchor="#example-anchor"
         data-aos-offset="500"
         data-aos-duration="500"
-      >
-        <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="" />
+      > 
+
+        <div  class="botonfloat__wapp" >
+          <img src="../assets\img\float.svg" alt="" />
+          <div class="rectangulo">
+          </div>
+        </div>
+        
         <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt="" />
+
       </a>
     </div>
     <!-- Menu -->
@@ -142,11 +149,13 @@
     <section class="conten_setion_uno">
       <div class="titulo_setion_uno">
         <h1>
-          Soy el <strong>diseñador</strong><br /> que buscabas
+          <div class="titulo"><p class="h_uno">Soy el</p></div><br />
+          <div class="titulo"><p class="h_dos">diseñador</p></div><br />
+          <div class="titulo"><p class="h_tres">que buscabas</p></div>
         </h1>
 
         <div class="cont_barra_contadores">
-          <img class="item" src="../assets/img/mecontadores.svg" alt="mecontadores" />
+          <img class="item_img item" src="../assets/img/mecontadores.svg" alt="mecontadores" />
           <div class="cont_parrafo_contadores item">
             <p class="parrafo">
               “Transformo los problemas de tus productos en <br />
