--- a/pages/index.html
+++ b/pages/index.html
@@ -289,7 +289,7 @@
           <h3 class="subtitulo_aboutme">EXPERIENCIAS POSITIVAS +</h3>
           <p class="context_subtitulo">
             soy Jaksin sains, Diseñador de experiencias positivas, Tengo 28 años
-            de edad y 2 años de experiencia, diseñador ux - ui, especialista en
+            de edad y 4 años de experiencia, diseñador ux - ui, especialista en
             ux research , ux Writing, Dev jr web - móvil y motion designer.
           </p>
           <p class="etiqueta">( conóceme un poco )</p>
@@ -317,7 +317,7 @@
             <div class="titulo_contenido">
               <p class="titulo">Diseñador</p>
               <p class="contenido_contenido">
-                Diseñador ux - ui, desde hace 2 años con especialidad en ux
+                Diseñador ux - ui, desde hace 4 años con especialidad en ux
                 research y ux writing
               </p>
             </div>
@@ -957,7 +957,7 @@
           <div class="cont_animacion_uno">
             <?xml version="1.0" standalone="no"?>
             <svg
-              id="svguno"
+              class="svguno"
               width="100%"
               height="734"
               viewBox="0 0 923 734"
