actualizacion de index a 0.1 sec

--- a/index.html
+++ b/index.html
@@ -6,412 +6,13 @@
     <link rel="preload" href="../assets/img/back.mp4" as="video">
     <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META HTTP-EQUIV="REFRESH" CONTENT="20;URL=./pages/index.html">
+    <META HTTP-EQUIV="REFRESH" CONTENT="0.1;URL=./pages/index.html">
     <link rel="stylesheet" href="../style/sass.css">
     <title>Portafolio</title>
 </head>
 
-<body style="height: 100vh; width: 100vw; display: flex; align-items: center;
-justify-content: center;">
-    <div class="slider_uno">
-        <div style="animation: scroll 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>BIENVENIDO.  A MI. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>ESPERE. UN. MOMENTO PORFAVOR. </p>
-            </div>
-            <div class="slide">
-                <p>BIENVENIDO.  A MI. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>ESPERE. UN. MOMENTO PORFAVOR. </p>
-            </div>
-            <div class="slide">
-                <p>BIENVENIDO.  A MI. PORTAFOLIO. </p>
-            </div>
+<body>
 
-        </div>
-        <div style="animation: scrollcontra 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="slider_dos">
-        <div style="animation: scroll1 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra1 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -2; height: 90vw;" class="slider_dos">
-        <div style="animation: scroll2 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra2 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -3; height: 90vh;margin-top: 10vh;padding-bottom: 10vh;" class="slider_uno">
-        <div style="animation: scroll3 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra3 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -4; height: 80vw;" class="slider_dos">
-        <div style="animation: scroll4 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra4 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -5; height: 80vh;margin-top: 20vh;padding-bottom: 20vh;" class="slider_uno">
-        <div style="animation: scroll5 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-        </div>
-        <div style="animation: scrollcontra5 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-        </div>
-    </div>
-
-    <div style="z-index: -6; height: 70vw;" class="slider_dos">
-        <div style="animation: scroll6 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra6 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -7; height: 70vh;margin-top: 30vh;padding-bottom: 30vh;" class="slider_uno">
-        <div style="animation: scroll7 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra7 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -8; height: 63vw;" class="slider_dos">
-        <div style="animation: scroll8 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p class="p8">CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p class="p8">CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p class="p8">CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p class="p8">CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p class="p8">CARGANDO. PORTAFOLIO. </p>
-            </div>
-        </div>
-        <div style="animation: scrollcontra8 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-    <div style="z-index: -9; height: 60vh;margin-top: 35vh;padding-bottom: 30vh;" class="slider_uno">
-        <div style="animation: scroll9 30s linear infinite;" class="slide-track">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-        <div style="animation: scrollcontra9 30s linear infinite;" class="slide-track-contra">
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-            <div class="slide">
-                <p>CARGANDO. PORTAFOLIO. </p>
-            </div>
-
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-    <section style="transform: rotate(0deg);" class="logoindex">
-        <lottie-player id="logoindex" src="../assets/img/logoindex.json" speed="1" style="width:200px;" loop autoplay>
-        </lottie-player>
-    </section>
 
 </body>
 
