add ajuste en responsive

--- a/pages/index.html
+++ b/pages/index.html
@@ -2608,7 +2608,7 @@
     <!-- 8. reel diagonal -->
     <section class="cont_reel_diagonal">
       <div class="cont_fixed_reel">
-        <h3 class="titulo_reel">SI TE GUSTA APRENDER AL IGUAL QUE A MI</h3>
+        <h3 class="titulo_reel">TUTORIALES</h3>
         <p class="contenido_reel">
           PODRAS ENCONTRAR MIS TUTORIALES AQUI, TODO PARA BEGINNERS QUE QUIEREN APRENDER.
         </p>
