--- a/pages/index.html
+++ b/pages/index.html
@@ -149,13 +149,12 @@
     <section class="conten_setion_uno">
       <div class="titulo_setion_uno">
         <h1>
-          <div class="titulo"><p class="h_uno">Soy el</p></div><br />
-          <div class="titulo"><p class="h_dos">diseñador</p></div><br />
+          <div class="titulo"><p class="h_uno">Hola, soy el</p></div><br />
+          <div class="titulo"><p class="h_dos">diseñador <strong>ux/ui</strong>  </p></div><br />
           <div class="titulo"><p class="h_tres">que buscabas</p></div>
         </h1>
 
         <div class="cont_barra_contadores">
-          <img class="item_img item" src="../assets/img/mecontadores.svg" alt="mecontadores" />
           <div class="cont_parrafo_contadores item">
             <p class="parrafo">
               “Transformo los problemas de tus productos en <br />
@@ -175,41 +174,9 @@
               >
             </div>
           </div>
-          <div class="contador_cont item">
-            <h4>+12</h4>
-            <p>Proyectos</p>
-          </div>
-          <div class="contador_cont item">
-            <h4>+4</h4>
-            <p>Experiencia</p>
-          </div>
         </div>
       </div>
     </section>
-    <img class="grilla" src="../assets/img/grilla.svg" alt="grilla" />
-    <div class="fondo_inicio">
-      <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno" />
-      <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos" />
-      <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres" />
-      <div class="fondo_blur"></div>
-      <div class="fondo_blur_movil">
-        <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-          <filter id="displacementFilter">
-            <feTurbulence
-              type="fractalNoise"
-              baseFrequency="0.7"
-              result="turbulence"
-            />
-            <feComposite operator="in" in2="turbulence" result="monoNoise" />
-          </filter>
-          <rect
-            width="100%"
-            height="100%"
-            style="filter: url(#displacementFilter)"
-          />
-        </svg>
-      </div>
-    </div>
     <!-- 2. cinta -->
     <section class="cont_cinta_inicio">
       <div class="slider_inicio">
