add ajustes a section exp

--- a/pages/index.html
+++ b/pages/index.html
@@ -151,7 +151,7 @@
         <h1>
           <div class="titulo"><p class="h_uno">Hola, soy el</p></div><br />
           <div class="titulo"><p class="h_dos">diseñador <strong>ux/ui</strong>  </p></div><br />
-          <div class="titulo"><p class="h_tres">que buscabas</p></div>
+          <div class="titulo"><p class="h_tres">que <strong>buscabas</strong> </p></div>
         </h1>
 
         <div class="cont_barra_contadores">
@@ -595,6 +595,7 @@
           </a>
         </div>
         <div class="cont_lista_mi_experiencia_movil">
+          
           <a class="cont_item_mis_servicios" href="">
             <div class="cont_uno">
               <h4>Freelancer</h4>
@@ -607,13 +608,23 @@
           </a>
           <a class="cont_item_mis_servicios" href="">
             <div class="cont_uno">
+              <h4>Timeblie</h4>
+              <div class="subtitulo_experiencia">
+                <p class="titulo">Diseñador ux - ui</p>
+                <p class="fecha">2022 - 2022</p>
+              </div>
+            </div>
+            <p>( 02 )</p>
+          </a>
+          <a class="cont_item_mis_servicios" href="">
+            <div class="cont_uno">
               <h4>Fintra s.a</h4>
               <div class="subtitulo_experiencia">
                 <p class="titulo">Diseñador ux - ui</p>
                 <p class="fecha">2019 - 2021</p>
               </div>
             </div>
-            <p>( 01 )</p>
+            <p>( 03 )</p>
           </a>
           <a class="cont_item_mis_servicios" href="">
             <div class="cont_uno">
@@ -623,7 +634,7 @@
                 <p class="fecha">2019 - 2021</p>
               </div>
             </div>
-            <p>( 01 )</p>
+            <p>( 04 )</p>
           </a>
           <a class="cont_item_mis_servicios" href="">
             <div class="cont_uno">
@@ -633,8 +644,9 @@
                 <p class="fecha">2018 - 2019</p>
               </div>
             </div>
-            <p>( 01 )</p>
+            <p>( 05 )</p>
           </a>
+          
         </div>
       </section>
     </div>
