ajuste de menu en plantilla proyectos y de cintas

--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -99,7 +99,7 @@
             </div>
             <div class="parrafo">
                 <p>
-                    Desarrollo del lado frontend paginas web  llamativas y interactivas con HTML5, CSS, JS y también aplicaciones multiplataforma usando el framework Flutter.
+                    Desarrollo del lado frontend paginas web  llamativas e interactivas con HTML5, CSS, JS y también aplicaciones multiplataforma usando el framework Flutter.
             </div>
             <div class="contadores">
 
@@ -120,40 +120,40 @@
         <div class="slider_inicio">
             <div translate="no" class="slide-track">
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>DESARROLLO.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>FRONTEND.</p>
                 </div>
             </div>
         </div>
