--- a/pages/p_ux_writing.html
+++ b/pages/p_ux_writing.html
@@ -122,40 +122,40 @@
         <div class="slider_inicio">
             <div translate="no" class="slide-track">
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p> UX - UI.</p>
+                    <p>UX - WRITING.</p>
                 </div>
                 <div class="slide">
-                    <p>DESIGNER.</p>
+                    <p>UX - WRITING.</p>
                 </div>
             </div>
         </div>
