add imagen erros

--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -159,52 +159,8 @@
         </div>
     </section>
     <!-- .3 cinta -->
-    <section class="cont_grilla_proyectos">
-        <div class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-
-            </div>
-        </div>
-        <div class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-
-            </div>
-        </div>
-        <div class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-
-            </div>
-        </div>
+    <section class="cont_ilustracion_error">
+        <img src="../assets/img/iluserror.svg" alt="">
     </section>
 
     <!-- *. pie de pagina -->
