--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +7,18 @@
     <meta name="description"
         content="Portafolio web de Jaksin sain , diseñador de productos tecnológicos enfocado a la interacción positiva de usuarios y el mejoramiento de productos con 3 años de experiencia.">
     <meta name="keywords" content="portafolio,ux,ui,diseñador,diseñador Ux-Ui,diseñador ux,proyectos ux-ui">
-    <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
+    <link rel="icon" type="image/svg+xml" href="../assets/img/iconweb.svg" sizes="any">
     <link rel="stylesheet" href="../style/sass.css">
-    <title>Ux-Ui</title>
+    <title>Portafolio jannier</title>
 </head>
 
-<body class="body_plantilla">
+<body class="body_proyecto">
     <div class="cursor"></div>
     <!-- Menu -->
     <section class="conte__menu">
         <header class="header__index">
             <div class="cont__logo__nav">
-                <a href="./index.html">
+                <a href="../pages/index.html">
                     <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width: 100px"
                         autoplay>
                     </lottie-player>
@@ -84,140 +83,32 @@
             </div>
         </div>
     </section>
+
     <!-- .1 inicio -->
-    <section class="cont_inicio">
-        <div class="colum_uno">
+    <section class="cont_inicios">
+        <div class="colum_unos">
+            <div class="tipo">
+                <p>PROYECTOS</p>
+            </div>
             <div class="titulo">
                 <h1 translate="no">
-                    UX - UI DESIGN
+                    PORTAFOLIO JANNIER FERRER
                 </h1>
             </div>
             <div class="parrafo">
                 <p>
-                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
-                    útiles y resuelvan las necesidades reales de los usuarios.
+                   JANNIER FERRER
                 </p>
             </div>
-            <div class="contadores">
-
-            </div>
-            <div class="stikerlvl">
-                <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
-                <p translate="no">Meddle</p>
-            </div>
-        </div>
-
-        <div class="columdos">
 
         </div>
-
     </section>
-    <!-- .2 cinta -->
-    <section class="cont_cinta_plantilla">
-        <div class="slider_inicio">
-            <div translate="no" class="slide-track">
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-            </div>
-        </div>
+
+    <!-- .2 banner -->
+    <section class="cont_banner">
+        <img src="../assets/img/banner_jannier.png" alt="">
     </section>
-    <!-- .3 cinta -->
-    <section class="cont_grilla_proyectos">
 
-        <a href="../projects/portafolio_jannier.html" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
-
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
-
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
-
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
-    </section>
     <!-- *. pie de pagina -->
     <section class="cont_pie_de_pagina">
         <div class="cont_titulo_pie">
@@ -246,9 +137,6 @@
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="../js/three.js"></script>
-    <script src="../js/admthreeplantillas.js"></script>
     <script src="../js/scroll.js"></script>
 </body>
 
