add nueva section en proyecto

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -109,6 +109,30 @@
         <img src="../assets/img/banner_jannier.png" alt="">
     </section>
 
+    <!-- .3 acerca del proyecto -->
+    <section class="cont_acercadelproyecto">
+        <h3>ACERCA DEL PROYECTO</h3>
+        <div class="cont_data_proyecto">
+            <div class="data">
+                <div class="cont_dato">
+                    <p class="titulo">Área</p>
+                    <p class="dato">DESARROLLO</p>
+                </div>
+                <div class="cont_dato">
+                    <p class="titulo">Año</p>
+                    <p class="dato">2024</p>
+                </div>
+                <div class="cont_dato">
+                    <p class="titulo">Tipo de producto</p>
+                    <p class="dato">WEB</p>
+                </div>
+            </div>
+            <div class="data_proyecto">
+                Lorem ipsum dolor sit amet consectetur. Aliquet diam mattis semper in in elementum ac amet. Nisi sit eleifend neque egestas egestas sapien. Tortor consequat orci arcu dictum dui elit faucibus. Ultrices neque at venenatis id dignissim sit ipsum non odio.
+            </div>
+        </div>
+    </section>
+
     <!-- *. pie de pagina -->
     <section class="cont_pie_de_pagina">
         <div class="cont_titulo_pie">
