add section de paleta de color

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="portafolio,ux,ui,diseñador,diseñador Ux-Ui,diseñador ux,proyectos ux-ui">
     <link rel="icon" type="image/svg+xml" href="../assets/img/iconweb.svg" sizes="any">
     <link rel="stylesheet" href="../style/sass.css">
-    <title>Portafolio jannier</title>
+    <title>Proyecto portafolio jannier</title>
 </head>
 
 <body class="body_proyecto">
@@ -131,6 +131,43 @@
                 Lorem ipsum dolor sit amet consectetur. Aliquet diam mattis semper in in elementum ac amet. Nisi sit eleifend neque egestas egestas sapien. Tortor consequat orci arcu dictum dui elit faucibus. Ultrices neque at venenatis id dignissim sit ipsum non odio.
             </div>
         </div>
+    </section>
+
+    <!-- .4 paleta de colores -->
+    <section class="cont_paletadecolores">
+        <h3>PALETA DE COLORES</h3>
+        <div class="cont_cont_colores">
+            <div class="color_uno">
+                <p class="titulo">Background</p>
+                <p>#FFFFFF</p>
+            </div>
+
+            <div class="color_segundario">
+                <div class="color_dos">
+                    <p class="titulo">Acciones</p>
+                    <p>#FF4D00</p>
+                </div>
+                <div class="color_tres">
+                    <p class="titulo">Contraste de fuente</p>
+                    <p>#303030</p>
+                </div>
+                <div class="color_cuatro">
+                    <p class="titulo">Fuente</p>
+                    <p>#000000</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- .5 fuente -->
+    <section class="cont_fuentes">
+        <h3>TIPOGRAFIAS</h3>
+        <div class="fuente">
+            <p>Primera Fuente</p>
+            <h4>Mona sans</h4>
+            
+        </div>
+
     </section>
 
     <!-- *. pie de pagina -->
